--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -22,7 +22,7 @@
       <a href="../index.html">Home</a></li>
       <a href="./gamified.html">Gamified Task Manager</a></li>
       <a href="./fidelity.html">Fidelity</a></li>
-      <a href="./projects/greencrew.html">Sustainable Claremont</a></li>
+      <a href="./greencrew.html">Sustainable Claremont</a></li>
       <a href="../about.html">Blog Info</a>
     </div>
 
@@ -44,8 +44,8 @@
 
         <!-- shortcuts to top and bottom -->
         <div class="proj-shortcuts">
-            <p><a href="#June-11-2019-SC">To top (newest entries)</a></p>
-            <p><a href="#June-10-2019-SC">To bottom (oldest entries)</a></p>
+            <h6><a href="#June-11-2019-SC">To top (newest entries)</a></h6>
+            <h6><a href="#June-10-2019-SC">To bottom (oldest entries)</a></h6>
         </div>
     </div>
 
