--- a/projects/gamified.html
+++ b/projects/gamified.html
@@ -22,7 +22,7 @@
       <a href="../index.html">Home</a></li>
       <a href="./gamified.html">Gamified Task Manager</a></li>
       <a href="./fidelity.html">Fidelity</a></li>
-      <a href="./projects/greencrew.html">Sustainable Claremont</a></li>
+      <a href="./greencrew.html">Sustainable Claremont</a></li>
       <a href="../about.html">Blog Info</a>
     </div>
 
