--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -44,8 +44,8 @@
 
         <!-- shortcuts to top and bottom -->
         <div class="proj-shortcuts">
-            <h6><a href="#June-11-2019-SC">To top (newest entries)</a></h6>
-            <h6><a href="#June-10-2019-SC">To bottom (oldest entries)</a></h6>
+            <h6><a href="#June-11-2019-SC">To top (newest entries)</a>
+                <a href="#June-10-2019-SC">To bottom (oldest entries)</a></h6>
         </div>
     </div>
 
