--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -27,7 +27,7 @@
     </div>
 
     <div id="main">
-      <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
+      <button class="openbtn" onclick="openNav()">&#9776; Menu</button>
       
       <!-- Project Header -->
       <div class="proj-header">
