--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </div>
 
     <div id="main">
-      <button class="openbtn" onclick="openNav()">&#9776; Menu</button>
+      <button class="openbtn" onclick="openNav()">&#9776;</button>
 
       <!-- Header -->
       <div id="about-header">
