--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -45,8 +45,8 @@
 
         <!-- shortcuts to top and bottom -->
         <div class="proj-shortcuts">
-            <h6><a href="#June-11-2019-SC">To newest</a></h6>
-            <h6><a href="#June-10-2019-SC">To oldest</a></h6>
+            <h6><a href="#June-11-2019-SC">To newest</a>
+            <br><a href="#June-10-2019-SC">To oldest</a></h6>
         </div>
 
         <!-- Blog posts -->
