--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div id="main">
-      <button class="openbtn" onclick="openNav()">&#9776; Menu</button>
+      <button class="openbtn" onclick="openNav()">&#9776;</button>
 
       <!-- Main Page Text -->
       <div class="home-page">
