--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta charset="utf-8">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -45,8 +45,8 @@
 
         <!-- shortcuts to top and bottom -->
         <div class="proj-shortcuts">
-            <h6><a href="#June-11-2019-SC">&#21D1;<br>To newest</a>
-            <br><a href="#June-10-2019-SC">&#21D3;<br>To oldest</a></h6>
+            <p><a href="#June-11-2019-SC">&uArr;<br>To newest</a></p>
+            <p><br><a href="#June-10-2019-SC">&dArr;<br>To oldest</a></p>
         </div>
 
         <!-- Blog posts -->
