--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -46,7 +46,7 @@
         <!-- shortcuts to top and bottom -->
         <div class="proj-shortcuts">
             <p><a href="#June-11-2019-SC">&uArr;<br>To newest</a></p>
-            <p><br><a href="#June-10-2019-SC">&dArr;<br>To oldest</a></p>
+            <p><br><a href="#June-10-2019-SC">To oldest<br>&dArr;</a></p>
         </div>
 
         <!-- Blog posts -->
