--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -39,7 +39,7 @@
             <h2>STATUS: Complete</h2>
         </div>
         <div class="proj-dates">
-            <h2>June-August, March 2019</h2>
+            <h2>June-August 2019, March 2020</h2>
         </div>
       </div>
 
