separate shortcut buttons attempt

--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -45,8 +45,12 @@
 
         <!-- shortcuts to top and bottom -->
         <div class="proj-shortcuts">
-            <p><a href="#June-11-2019-SC">&uArr;<br>To newest</a></p>
-            <p><br><a href="#June-10-2019-SC">To oldest<br>&dArr;</a></p>
+            <div class="proj-shortcuts-top">
+                <p><a href="#June-11-2019-SC">&uArr;<br>To newest</a></p>
+            </div>
+            <div class="proj-shortcuts-bot">
+                <p><br><a href="#June-10-2019-SC">To oldest<br>&dArr;</a></p>
+            </div>
         </div>
 
         <!-- Blog posts -->
