--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!-- Link to Website-->
         <div id="website">
-          <p>For more info about me and my other projects
+          <p><br>For more info about me and my other projects
           <br>visit my website: <a href="http://vivian-pou.com/" target="_blank">vivian-pou.com</a></p>
         </div>
       </div>
