--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -43,6 +43,17 @@
         </div>
       </div>
 
+      <div class="proj-footer">
+          <div class="descr-title">
+              <p>
+                  Project description
+              </p>
+          </div>
+          <div class="descr-body">
+              project description here
+          </div>
+      </div>
+
         <!-- shortcuts to top and bottom -->
         <div class="proj-shortcuts">
             <div class="proj-shortcuts-top">
