--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -44,14 +44,11 @@
       </div>
 
       <div class="proj-footer">
-          <div class="descr-title">
-              <p>
-                  Project description
-              </p>
-          </div>
-          <div class="descr-body">
-              project description here
-          </div>
+        <p>
+            This project was a research opportunity at Harvey Mudd in partnership with a local nonprofit (Sustainable Claremont). 
+            I worked on a small research team of 3 people and mentored a high school student for 4 weeks during this opportunity.
+            We worked on a Contact tool to automatically send watering reminders to volunteers based on weather, a Tree Benefit Analysis tool to provide calculations for writing reports, and a Shade Canopy Map to interactively show tree growth over 25 years.
+        </p>
       </div>
 
         <!-- shortcuts to top and bottom -->
