new home button test

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div id="main">
-      <button class="openbtn" onclick="openNav()">&#9776;</button>
+      <button class="home-openbtn" onclick="openNav()">&#9776;</button>
 
       <!-- Main Page Text -->
       <div class="home-page">
