--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
     </div>
 
     <div id="main">
-      <button class="home-openbtn" onclick="openNav()">&#9776;</button>
+      <button class="openbtn" onclick="openNav()">&#9776;</button>
 
       <!-- Main Page Text -->
       <div class="home-page">
+
+        <div id="important-message">
+          <p>In this household we don't mansplain >:(</p>
+        </div>
         
         <div id="main-title">
           <h2>Vivian's Project Blog</h2>
