clarification added to message

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="home-page">
 
         <div id="important-message">
-          <p>In this household we don't mansplain >:(</p>
+          <p>In this household those caught mansplaining will have their vocal cords forcibly removed and fingers rendered nonfunctional.</p>
         </div>
         
         <div id="main-title">
