added bold and adjust closebtn

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <!-- Main Page Text -->
       <div class="home-page">
 
-        <div id="important-message">
-          <p>In this household those caught mansplaining will have their vocal cords forcibly removed and fingers rendered nonfunctional.</p>
+        <div id="hidden-message">
+          <p>In this household those caught <em>mansplaining</em> will have <strong>vocal cords forcibly removed</strong> and <strong>usage of remaining limbs discontinued indefinitely</strong>.</p>
         </div>
         
         <div id="main-title">
