--- a/projects/gamified.html
+++ b/projects/gamified.html
@@ -78,8 +78,8 @@
         <div class="proj-footer">
             <p>
               This project was created by four Harvey Mudd Students (Allen Wu, Kip Lim, Wayne Ying, and myself).
-              <br>We noticed that there was a lack of fun gamified task managers that appeals to the younger age demographic, especially young women.
-              <br>Our goal is to create an app that helps young people achieve their goals by motivating them via this app.  
+              <br>We noticed a lack of fun gamified task managers that appeals to the younger age demographic, especially young women.
+              <br>Our goal with this app if to help young people achieve their goals and have fun along the way.  
             </p>
         </div>
     </div>
