--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
       
       <!-- Link to Github Repo -->
       <div id="github-link">
-        <p>This site is hosted on Github Pages, which means you can view the code I wrote, which runs this website!
+        <p>This site is hosted on Github Pages, which means you can view the code I wrote that runs this website!
         <br>View my code repository here: <a href="https://github.com/vivpou/vivpou.github.io" target="_blank">vivpou/vivpou.github.io</a></p>
       </div>
 
