--- a/projects/gamified.html
+++ b/projects/gamified.html
@@ -78,7 +78,7 @@
         <div class="proj-footer">
             <p>
               This project was created by four Harvey Mudd Students (Allen Wu, Kip Lim, Wayne Ying, and myself).
-              <br>We noticed a lack of fun gamified task managers that appeals to the younger age demographic, especially young women.
+              <br>We noticed a lack of fun gamified task managers that appeal to the younger age demographic, especially young women.
               <br>Our goal with this app if to help young people achieve their goals and have fun along the way.  
             </p>
         </div>
