--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -111,9 +111,9 @@
 
         <div class="proj-footer">
             <p>
-                This project was a research opportunity at Harvey Mudd in partnership with a local nonprofit (Sustainable Claremont). 
+                This project was a research opportunity at Harvey Mudd working a local nonprofit (Sustainable Claremont). 
                 <br>I worked on a small research team of 3 people and mentored a high school student for 4 weeks during this opportunity.
-                <br>We worked on a Contact tool to automatically send watering reminders to volunteers based on weather, a Tree Benefit Analysis tool to provide calculations for writing reports, and a Shade Canopy Map to interactively show tree growth over 25 years.
+                <br>We used Google Apps Script to work on a Contact tool to automatically send watering reminders to volunteers based on weather and a Tree Benefit Analysis tool to provide calculations for writing reports. We also used ArcGIS to build a Shade Canopy Map to interactively show tree growth over 25 years.
             </p>
         </div>
     </div>
