--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="/projects/gamified.html">Gamified Task Manager</a></li>
       <a href="/projects/fidelity.html">Fidelity</a></li>
       <a href="/projects/greencrew.html">Sustainable Claremont</a></li>
-      <a href="./about.html">Blog Info</a>
+      <a href="./about.html">Info</a>
     </div>
 
     <div id="main">
