--- a/projects/fidelity.html
+++ b/projects/fidelity.html
@@ -151,8 +151,8 @@
 
         <div class="proj-footer">
             <p>
-                This summer I am working as a Software Engineer Intern in the CTG (Corporate Technology Group) business group. Specifically, I am working as part of the APT (Accounting Procurement Team).
-                <br> (More details to come as I settle into my internship role. Stay Tuned!)
+                This summer I am working as a Software Engineer Intern as part of the CTG (Corporate Technology Group) business group. Specifically, I am working as part of the APT (Accounting Procurement Team).
+                <br> <em>(More details to come as I settle into my internship role. Stay tuned!)</em>
             </p>
         </div>
     </div>
