updated project summary

--- a/projects/fidelity.html
+++ b/projects/fidelity.html
@@ -284,8 +284,9 @@
 
         <div class="proj-footer">
             <p>
-                This summer I am working as a Software Engineer Intern as part of the CTG (Corporate Technology Group) business group. Specifically, I am working as part of the APT (Accounting Procurement Team).
-                <br> <em>(More details to come as I settle into my internship role. Stay tuned!)</em>
+                This summer I am working as a Software Engineer Intern as part of the CTG (Corporate Technology Group) business group. Specifically, I am working as part of the FPAIT (Finance Procurement Accounting Infrastructure Team).
+                <br> I am working in close partnership with the Business Procurement Team to implement NLP into their Spend classification process so that it is more flexible and requires less manual upkeeping than the current rule-based model requires.
+                <br> <em> More details to come as I settle into my internship role!</em>
             </p>
         </div>
     </div>
