--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="proj-status">
-            <p>STATUS: Complete</p>
+            <p><em>STATUS: Complete</em></p>
         </div>
       </div>
 
