--- a/projects/gamified.html
+++ b/projects/gamified.html
@@ -39,7 +39,7 @@
       </div>
 
         <div class="proj-status">
-            <p>STATUS: In Progress</p>
+            <p><em>STATUS: In Progress</em></p>
         </div>
       </div>
 
