--- a/projects/gamified.html
+++ b/projects/gamified.html
@@ -34,12 +34,12 @@
         <div class="proj-title">
             <h1>Gamified Task Manager</h1>
         </div>
-        <div class="proj-dates">
+        <div class="proj-dates">s
           <p>May 2020-Present</p>
       </div>
 
         <div class="proj-status">
-            <p><em>STATUS: In Progress</em></p>
+            <p><em>STATUS: On Hold</em></p>
         </div>
       </div>
 
