updated prject summary

--- a/projects/fidelity.html
+++ b/projects/fidelity.html
@@ -72,7 +72,7 @@
                   For most of today, I completed more LinkedIn Learning courses and took care of some logistical things for the end of the internship. On LinkedIn learning I completed some courses on source control. Source control doesn't directly relate to my project, since it was largely independent, but I feel that these topics will be useful in the future for more team-based projects.
                 </p>
                 <p>
-                  This afternoon I had the final wrap-up meeting with David, Daniel, and Kiran.
+                  This afternoon I had the final wrap-up meeting with David, Kiran, Anuj, and Janice. I brought up the remaining open issues and what I have attempted or considered and what is still yet to be done. Kiran updated me on what next steps are being taken with this project. I also got to provide some feedback on this internship with what I enjoyed what could be improved. It seems like the project’s current state is all set for the hand-off, so it was a good last meeting to have, and I feel good about where I left the project.
                 </p>
                 <p>
                   Overall, I had a great time during my internship at Fidelity this summer. Despite the virtual setting, I’ve had the opportunity to learn a lot of new skills ranging from technical to corporate workflow to connecting with new people. Throughout the whole project, I’ve been excited to see new ways I could expand my project and share my progress. I also had great support from mentors, teammates, and others for project, career, and academic advice and I hope to keep in touch with these connections. I’m excited to see what opportunities next summer holds, but that’s all for now!
@@ -1651,9 +1651,10 @@
 
         <div class="proj-footer">
             <p>
-                This summer I am working as a Software Engineer Intern as part of the CTG (Corporate Technology Group) business group. Specifically, I am working as part of the FPAIT (Finance Procurement Accounting Infrastructure Team).
-                <br> I am working in close partnership with the Business Procurement Team to implement NLP into their Spend classification process so that it is more flexible and requires less manual upkeeping than the current rule-based model requires.
-                <br> <em> More details to come as I settle into my internship role!</em>
+              This project was for my Summer 2020 remote internship at Fidelity Investments. I worked as a Software Engineering Intern as part of the CTG (Corporate Technology Group) business group, specifically on the FPAIT (Finance Procurement Accounting Information Technology).
+              <br>My project was in close partnership with the Business Procurement Team to implement NLP into their Spend classification process so that it is more flexible and requires less manual upkeep. This was my first exposure to Machine Learning and NLP and there was definitely a lot of struggle with trial and error throughout the process.
+              <br>By the end of the summer I developed a 97% accurate model that is being taken forward to productionalization.
+              
             </p>
         </div>
     </div>
