--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         <!-- Status Box -->
         <div id="status">
-          <p><strong>Currently Blogging:</strong> Gamified Task Manager AND Fidelity</p>
+          <p><strong>Currently Blogging:</strong> Nothing for now!</p>
         </div>
 
         <!-- Link to Website-->
