updated header status

--- a/projects/fidelity.html
+++ b/projects/fidelity.html
@@ -39,7 +39,7 @@
       </div>
 
         <div class="proj-status">
-            <p><em>STATUS: In Progress</em></p>
+            <p>STATUS: Complete</p>
         </div>
       </div>
 
