updated header dates

--- a/projects/fidelity.html
+++ b/projects/fidelity.html
@@ -35,7 +35,7 @@
             <h1>Fidelity Internship</h1>
         </div>
         <div class="proj-dates">
-          <p>June 2020-Present</p>
+          <p>June-August 2020</p>
       </div>
 
         <div class="proj-status">
