fixed typo in header

--- a/projects/gamified.html
+++ b/projects/gamified.html
@@ -34,7 +34,7 @@
         <div class="proj-title">
             <h1>Gamified Task Manager</h1>
         </div>
-        <div class="proj-dates">s
+        <div class="proj-dates">
           <p>May 2020-Present</p>
       </div>
 
