--- a/projects/gamified.html
+++ b/projects/gamified.html
@@ -35,7 +35,7 @@
             <h1>Gamified Task Manager</h1>
         </div>
         <div class="proj-dates">
-          <p>May 2020-Present</p>
+          <p>May 2020-August 2020</p>
       </div>
 
         <div class="proj-status">
