--- a/about.html
+++ b/about.html
@@ -21,8 +21,9 @@
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="./index.html">Home</a></li>
+      <a href="/projects/eBay.html">eBay Clinic</a></li>
       <a href="/projects/gamified.html">Gamified Task Manager</a></li>
-      <a href="/projects/fidelity.html">Fidelity</a></li>
+      <a href="/projects/fidelity.html">Fidelity 2020</a></li>
       <a href="/projects/greencrew.html">Sustainable Claremont</a></li>
       <a href="./about.html">Info</a>
     </div>
