--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -20,8 +20,9 @@
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="../index.html">Home</a></li>
+      <a href="./eBay.html">eBay Clinic</a></li>
       <a href="./gamified.html">Gamified Task Manager</a></li>
-      <a href="./fidelity.html">Fidelity</a></li>
+      <a href="./fidelity.html">Fidelity 2020 </a></li>
       <a href="./greencrew.html">Sustainable Claremont</a></li>
       <a href="../about.html">Info</a>
     </div>
