fixed eBay header

--- a/projects/eBay.html
+++ b/projects/eBay.html
@@ -33,14 +33,14 @@
       <!-- Project Header -->
       <div class="proj-header">
         <div class="proj-title">
-            <h1>eBay Clinic Project</h1>
-        </div>
-
-        <div class="proj-status">
-            <p>STATUS: In Progress</p>
+            <h1>eBay Clinic</h1>
         </div>
         <div class="proj-dates">
-            <p>September 2021-Present</p>
+          <p>September 2021-Present</p>
+      </div>
+
+        <div class="proj-status">
+            <p>STATUS: IN PROGRESS</p>
         </div>
       </div>
 
